// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with a text 1`] = `
<DocumentFragment>
  .cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-t9e53m-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet renders correctly with an icon 1`] = `
<DocumentFragment>
  .cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

<div
    class="cache-t9e53m-StyledContainer e1u3ywq30"
  >
    <svg
      class="cache-14kwy0i-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.98 2.97a9 9 0 1 0 0 18c1.83 0 3.53-.55 4.95-1.48a9 9 0 0 1-4.05-7.52 9 9 0 0 1 4.05-7.52c-1.42-.94-3.12-1.48-4.95-1.48zm0 1.8a7.2 7.2 0 0 1 1.4.14l.28.06-.1.11c-1.5 1.81-2.39 4.09-2.48 6.52l-.01.37c0 2.57.91 4.99 2.48 6.89l.1.11-.28.06a7.3 7.3 0 0 1-1.05.13l-.36.01a7.2 7.2 0 0 1 0-14.4z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Bullet size render medium 1`] = `
<DocumentFragment>
  .cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-t9e53m-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render small 1`] = `
<DocumentFragment>
  .cache-1ut1z3i-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

<div
    class="cache-1ut1z3i-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render danger 1`] = `
<DocumentFragment>
  .cache-1g9e1v4-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #ffe1e7;
  color: #a6102d;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1g9e1v4-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render default 1`] = `
<DocumentFragment>
  .cache-t9e53m-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #4a4f62;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-t9e53m-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render disabled 1`] = `
<DocumentFragment>
  .cache-16j3ie1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  border: 1px solid #d4dae7;
  background-color: #ffffff;
  color: #b2b6c3;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-16j3ie1-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render info 1`] = `
<DocumentFragment>
  .cache-1gvbgop-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #e1ebff;
  color: #1a4dbf;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1gvbgop-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render primary 1`] = `
<DocumentFragment>
  .cache-1j58ixh-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eeeeff;
  color: #390171;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1j58ixh-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render success 1`] = `
<DocumentFragment>
  .cache-15uwjvh-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #eafffb;
  color: #149a7b;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-15uwjvh-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet variant render warning 1`] = `
<DocumentFragment>
  .cache-1981b9t-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  background-color: #ffefe6;
  color: #cc4e18;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="cache-1981b9t-StyledContainer e1u3ywq30"
  >
    1
  </div>
</DocumentFragment>
`;
